// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Dropdown _Esempi 1`] = `
<div>
  <div
    class="m-2"
  >
    <section>
      <div
        class="me-3 dropdown"
      >
        <button
          aria-haspopup="true"
          class="dropdown-toggle btn btn-primary"
          data-bs-toggle="dropdown"
        >
          Apri dropdown
          <svg
            class="icon icon-expand icon-sm icon-light"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
            />
          </svg>
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="link-list-wrapper"
          >
            <ul
              class="link-list"
            >
              <li>
                <a
                  class="dropdown-item list-item"
                  role="menuitem"
                  tabindex="0"
                >
                  Azione 1
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item list-item"
                  role="menuitem"
                  tabindex="0"
                >
                  Azione 2
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item list-item"
                  role="menuitem"
                  tabindex="0"
                >
                  Azione 3
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Dropdown _Link 1`] = `
<div>
  <section>
    <div
      class="me-3 dropdown"
    >
      <a
        aria-haspopup="true"
        class="btn-dropdown dropdown-toggle"
        color="primary"
        data-bs-toggle="dropdown"
        role="button"
      >
        Apri dropdown
        <svg
          class="icon icon-expand icon-sm"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
          />
        </svg>
      </a>
      <div
        class="dropdown-menu"
      >
        <div
          class="link-list-wrapper"
        >
          <ul
            class="link-list"
          >
            <li>
              <a
                class="dropdown-item list-item"
                role="menuitem"
                tabindex="0"
              >
                Azione 1
              </a>
            </li>
            <li>
              <a
                class="dropdown-item list-item"
                role="menuitem"
                tabindex="0"
              >
                Azione 2
              </a>
            </li>
            <li>
              <a
                class="dropdown-item list-item"
                role="menuitem"
                tabindex="0"
              >
                Azione 3
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Dropdown _VarianteBottoni 1`] = `
<div>
  <div
    class="m-2"
  >
    <div
      class="d-flex justify-content-around btn-group"
      role="group"
    >
      <div
        class="dropdown"
      >
        <button
          aria-haspopup="true"
          class="dropdown-toggle btn btn-primary"
          data-bs-toggle="dropdown"
        >
          Apri dropdown
          <svg
            class="icon icon-expand icon-sm icon-light"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
            />
          </svg>
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="link-list-wrapper"
          >
            <ul
              class="link-list"
            >
              <li>
                <a
                  class="dropdown-item list-item"
                  role="menuitem"
                  tabindex="0"
                >
                  Azione 1
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item list-item"
                  role="menuitem"
                  tabindex="0"
                >
                  Azione 2
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item list-item"
                  role="menuitem"
                  tabindex="0"
                >
                  Azione 3
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="dropdown"
      >
        <button
          aria-haspopup="true"
          class="dropdown-toggle btn btn-secondary"
          data-bs-toggle="dropdown"
        >
          Apri dropdown
          <svg
            class="icon icon-expand icon-sm icon-light"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
            />
          </svg>
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="link-list-wrapper"
          >
            <ul
              class="link-list"
            >
              <li>
                <a
                  class="dropdown-item list-item"
                  role="menuitem"
                  tabindex="0"
                >
                  Azione 1
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item list-item"
                  role="menuitem"
                  tabindex="0"
                >
                  Azione 2
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item list-item"
                  role="menuitem"
                  tabindex="0"
                >
                  Azione 3
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="dropdown"
      >
        <button
          aria-haspopup="true"
          class="dropdown-toggle btn btn-danger"
          data-bs-toggle="dropdown"
        >
          Apri dropdown
          <svg
            class="icon icon-expand icon-sm icon-light"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
            />
          </svg>
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="link-list-wrapper"
          >
            <ul
              class="link-list"
            >
              <li>
                <a
                  class="list-item"
                >
                  Azione 1
                </a>
              </li>
              <li>
                <a
                  class="list-item"
                >
                  Azione 2
                </a>
              </li>
              <li>
                <a
                  class="list-item"
                >
                  Azione 3
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
